# Star_hunt

./: README.md  bullet.cpp  bullet.hpp  game.cpp  game.hpp  gameobj.cpp  gameobj.hpp  gamer.cpp  gamer.hpp  gamestate.cpp  gamestate.hpp  grifer.cpp  grifer.hpp  main.cpp  meson.build
.cache/clangd/index/: bullet.cpp.413618A3DFCE4A75.idx  bullet.hpp.DB28D9E90E5791B6.idx  game.cpp.5BDF4229B5E369B6.idx  game.hpp.5ADA31E1F3B50D72.idx  gamer.cpp.A93C78DB47674830.idx  gamer.hpp.E93F83F4BF2C6131.idx  gamestate.cpp.6F457D56AD167756.idx  gamestate.hpp.6CCE449357842709.idx  grifer.cpp.E2CD1C700A0EB6DE.idx  grifer.hpp.89943E9D99360DE9.idx  main.cpp.613847089D882733.idx
scripts/: assetcopy.sh
